--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -51,12 +51,13 @@
     z-index: 5;
 
     p {
-        color: $black;
+        color: #333333;
         font-size: 25px;
-        width: 66%;
+        width: 67%;
         margin: auto;
         font-weight: 500;
         letter-spacing: -1.25px;
+        line-height: 30px;
     }
 }
 
