--- a/resources/sass/components/basic/selectbox.scss
+++ b/resources/sass/components/basic/selectbox.scss
@@ -62,6 +62,7 @@ select::-ms-expand {
         text-align: left;
         @include font-standard;
     }
+
     select {
         flex: 0 0 50%;
         padding: 12px 100px 12px 16px;
@@ -69,9 +70,9 @@ select::-ms-expand {
     }
 
     &:after {
-        content: '\f078';
-        font-family: 'Font Awesome 5 Free';
-        font-weight: 900;
+        //font-size: 10px;
+        //color: red;
+        content: url('../images/icons/chevron-down.svg');
         position: absolute;
         top: 0;
         bottom: 0;
